cambio en titulo y fondo
he cambiado el nombre del titulo y el fondo de pantalla

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Mi To Do</title>
+    <title>ToDoList</title>
 </head>
 
 <body >
@@ -15,7 +15,7 @@
         <div id ="app">
             <!-- Titulo -->
             <div class="titulo">
-                <h1>Mi To Do</h1>
+                <h1>ToDo List Naila</h1>
             </div>
             
         
