implementado la fecha
He implementado que la fecha se quede registrada cuando se crea la tarea, cuando se elimina y cuando se realiza. También he añadido un botón que elimina definitivamente todas las tareas y para que sea más seguro, he puesto un confirm para que el usuario confirme que quiera eliminarlas definitivamente

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         </div>
     </div>
 
+    <div class="contenedor-boton-eliminar">
+        <button id="eliminar_todas" onclick="eliminarTodasLasTareas()">Eliminar Todas las Tareas</button>
+    </div>
+
     <script type="text/javascript" src="js/main.js"></script>
     <script src="js/particles.min.js"></script>
     <script src="js/particlesjs-config.json"></script>
