filtro de tareas
He añadido un filtro de tareas; es decir, si seleccionas "muestra solo las tareas realizadas" te aparecen solo las tareas realizadas y las demás se ocultan, así con cada uno de los filtros que indico. Si se selecciona "todas" muestra todas las listas independientemente si están realizadas o eliminadas.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
             <button type="button" id="crear" onclick="crearToDoFn()">Crear</button>
         </div>
 
+        <!-- Filtro de tareas -->
+        <div class="filtro">
+            <label for="filtro_tareas">Filtrar tareas:</label>
+            <select id="filtro_tareas">
+                <option value="todas">Todas</option>
+                <option value="no_realizadas">Muestra solo las tareas No Realizadas</option>
+                <option value="realizadas">Muestra solo las tareas Realizadas</option>
+                <option value="eliminadas">Muestra solo las tareas Eliminadas</option>
+            </select>
+        </div>
+
         <!-- Sección de tríptico -->
         <div class="triptico">
             <div class="columna">
