codigos comentados/explicados
He comentado el codigo paso por paso para enterarme mejor de todo lo que hace el codigo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>ToDo List Naila</h1>
         </div>
         
-        <!-- Crear -->
+        <!-- Crear tareas-->
         <div class="seccion-crear">
             <input type="text" id="input_crear" placeholder="Nueva tarea...">
             <button type="button" id="crear" onclick="crearToDoFn()">Crear</button>
@@ -50,6 +50,7 @@
         </div>
     </div>
 
+    <!-- Botón eliminar las tareas definitivamente -->
     <div class="contenedor-boton-eliminar">
         <button id="eliminar_todas" onclick="eliminarTodasLasTareas()">Eliminar Todas las Tareas</button>
     </div>
